--- a/static/index.html
+++ b/static/index.html
@@ -376,7 +376,16 @@
         2) raw PCM Int16 frames as binary. If your server expects Opus/webm blobs instead, switch capture method to MediaRecorder.
 */
 
-const SERVER_WS = "ws://localhost:8000/ws";
+// Dynamically build WebSocket URL for local and deployed environments
+const SERVER_WS = (() => {
+  let protocol = window.location.protocol === 'https:' ? 'wss:' : 'ws:';
+  let host = window.location.host;
+  // If running from file:// or localhost with no host, fallback to localhost:8000
+  if (!host || host === '') {
+    host = 'localhost:8000';
+  }
+  return `${protocol}//${host}/ws`;
+})();
 const CHUNK_MS = 200;                // send audio approx every X ms
 const BUFFER_SIZE = 4096;            // ScriptProcessor buffer size
 const SILENCE_DURATION_MS = 1000;    // silence required to send activityEnd
